crates/oxvg_actions/src/actions/snapshots/oxvg_actions__actions__state__test__select_empty-2.snap
---
source: crates/oxvg_actions/src/actions/state.rs
expression: actor.root.serialize().unwrap()
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100" xmlns:oxvg="https://oxvg.noahwbaldwin.me"><oxvg:state><oxvg:history><oxvg:action oxvg:id="Select"><oxvg:arg>svg</oxvg:arg></oxvg:action><oxvg:action oxvg:id="Select"><oxvg:arg>1</oxvg:arg></oxvg:action></oxvg:history><oxvg:selection oxvg:ids="1"/></oxvg:state></svg>
